Bug 275324 - REGRESSION(279833@main): [ macOS iOS ] 4 TestWebKitAPI.GPUProcess tests are constant failure
Summary: REGRESSION(279833@main): [ macOS iOS ] 4 TestWebKitAPI.GPUProcess tests are c...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Kimmo Kinnunen
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-06-10 11:18 PDT by Marta Darbinyan
Modified: 2024-06-10 13:25 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marta Darbinyan 2024-06-10 11:18:48 PDT
The following tests started failing either/both on macOS and iOS after 279833@main.

Failure on iOS and macOS:
TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessaryMediaFeatureDetection 
TestWebKitAPI.GPUProcess.ExitsUnderMemoryPressureVideoCase
TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessarySVG

Failure only on iOS:
TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessary

Error output:
  TestWebKitAPI.GPUProcess.ExitsUnderMemoryPressureVideoCase
        2024-06-09 15:00:45.952 TestWebKitAPI[16674:164415932] *** Warning: <AVPlayerViewController: 0x14b00c600> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior.
        LEAK: 1 WebProcessPool
        LEAK: 1 WebPageProxy
        
        /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/workspace/OpenSource/Tools/TestWebKitAPI/Tests/WebKitCocoa/GPUProcess.mm:663
        Expected equality of these values:
          0
          [configuration.get().processPool _gpuProcessIdentifier]
            Which is: 16681
    TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessary
        LEAK: 1 WebProcessPool
        LEAK: 1 WebPageProxy
        
        /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/workspace/OpenSource/Tools/TestWebKitAPI/Tests/WebKitCocoa/GPUProcess.mm:221
        Expected equality of these values:
          [configuration.get().processPool _gpuProcessIdentifier]
            Which is: 16734
          0
    TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessaryMediaFeatureDetection
        LEAK: 1 WebProcessPool
        LEAK: 1 WebPageProxy
        
        /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/workspace/OpenSource/Tools/TestWebKitAPI/Tests/WebKitCocoa/GPUProcess.mm:311
        Expected equality of these values:
          [configuration.get().processPool _gpuProcessIdentifier]
            Which is: 16744
          0
    TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessarySVG
        LEAK: 1 WebProcessPool
        LEAK: 1 WebPageProxy
        
        /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/workspace/OpenSource/Tools/TestWebKitAPI/Tests/WebKitCocoa/GPUProcess.mm:275
        Expected equality of these values:
          [configuration.get().processPool _gpuProcessIdentifier]
            Which is: 16752
          0

History:
https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.GPUProcess.ExitsUnderMemoryPressureVideoCase&test=TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessary&test=TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessaryMediaFeatureDetection&test=TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessarySVG


Failed test run:
https://build.webkit.org/#/builders/927/builds/2125/steps/18/logs/stdio
Comment 1 Radar WebKit Bug Importer 2024-06-10 11:19:22 PDT
<rdar://problem/129515722>
Comment 2 Kimmo Kinnunen 2024-06-10 13:20:17 PDT
Pull request: https://github.com/WebKit/WebKit/pull/29682
Comment 3 EWS 2024-06-10 13:25:18 PDT
Committed 279886@main (73b90f15221a): <https://commits.webkit.org/279886@main>

Reviewed commits have been landed. Closing PR #29682 and removing active labels.