REGRESSION(279833@main): [ macOS iOS ] 4 TestWebKitAPI.GPUProcess tests are constant failure https://bugs.webkit.org/show_bug.cgi?id=275324 rdar://129515722

Reviewed by Cameron McCormack.

Add back early returns that avoid creating a connection to GPUP
for messages that do not need to be sent if the connection does not
exist.

Fixes tests:
TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessarySVG
TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessaryMediaFeatureDetection
TestWebKitAPI.GPUProcess.ExitsUnderMemoryPressureVideoCase
TestWebKitAPI.GPUProcess.OnlyLaunchesGPUProcessWhenNecessary

* Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
(WebKit::RemoteRenderingBackendProxy::releaseImageBuffer):
(WebKit::RemoteRenderingBackendProxy::releaseRemoteImageBufferSet):
(WebKit::RemoteRenderingBackendProxy::releaseAllDrawingResources):
(WebKit::RemoteRenderingBackendProxy::releaseRenderingResource):
(WebKit::RemoteRenderingBackendProxy::releaseAllImageResources):
(WebKit::RemoteRenderingBackendProxy::finalizeRenderingUpdate):

Canonical link: https://commits.webkit.org/279886@main